test/pass/api/list/list_select_none.lly
if [1,2,3].select{|a| false} != []:
    stderr.print("Failed.")
